@@ -59,3 +59,107 @@
   -XX:NewRatio=1
   ```
 
+#### 永久代/元空间大小调整
+
+JDK 1.8 之前永久代还没被彻底移除的时候通常通过下面这些参数来调节方法区大小
+
+
+
+```bash
+-XX:PermSize=N #方法区 (永久代) 初始大小
+-XX:MaxPermSize=N #方法区 (永久代) 最大大小,超过这个值将会抛出 OutOfMemoryError 异常:java.lang.OutOfMemoryError: PermGen
+```
+
+相对而言，垃圾收集行为在这个区域是比较少出现的，但并非数据进入方法区后就“永久存在”了。
+
+```bash
+-XX:MetaspaceSize=N #设置 Metaspace 的初始大小（是一个常见的误区，后面会解释）
+-XX:MaxMetaspaceSize=N #设置 Metaspace 的最
+```
+
+注：
+
+1. Metaspace 的初始容量并不是 `-XX:MetaspaceSize` 设置，无论 `-XX:MetaspaceSize` 配置什么值，对于 64 位 JVM 来说，Metaspace 的初始容量都是 21807104（约 20.8m）。
+
+2. Metaspace 由于使用不断扩容到`-XX:MetaspaceSize`参数指定的量，就会发生 FGC，且之后每次 Metaspace 扩容都会发生 Full GC。
+
+   也就是说，MetaspaceSize 表示 Metaspace 使用过程中触发 Full GC 的阈值，只对触发起作用。
+
+#### 垃圾收集配置
+
+1. 垃圾回收器指定
+
+   JVM 具有四种类型的 GC 实现：
+
+   - 串行垃圾收集器
+   - 并行垃圾收集器
+   - CMS 垃圾收集器
+   - G1 垃圾收集器
+
+   可以使用以下参数声明这些实现：
+
+   
+
+   ```bash
+   -XX:+UseSerialGC
+   -XX:+UseParallelGC
+   -XX:+UseParNewGC
+   -XX:+UseG1GC
+   ```
+
+2. 输出GC日志
+
+   ```text
+   # 必选
+   # 打印基本 GC 信息
+   -XX:+PrintGCDetails
+   -XX:+PrintGCDateStamps
+   # 打印对象分布
+   -XX:+PrintTenuringDistribution
+   # 打印堆数据
+   -XX:+PrintHeapAtGC
+   # 打印Reference处理信息
+   # 强引用/弱引用/软引用/虚引用/finalize 相关的方法
+   -XX:+PrintReferenceGC
+   # 打印STW时间
+   -XX:+PrintGCApplicationStoppedTime
+   
+   # 可选
+   # 打印safepoint信息，进入 STW 阶段之前，需要要找到一个合适的 safepoint
+   -XX:+PrintSafepointStatistics
+   -XX:PrintSafepointStatisticsCount=1
+   
+   # GC日志输出的文件路径
+   -Xloggc:/path/to/gc-%t.log
+   # 开启日志文件分割
+   -XX:+UseGCLogFileRotation
+   # 最多分割几个文件，超过之后从头文件开始写
+   -XX:NumberOfGCLogFiles=14
+   # 每个文件上限大小，超过就触发分割
+   -XX:GCLogFileSize=50M
+   
+   ```
+
+
+
+#### OOM参数
+
+JVM 提供了一些参数，这些参数将堆内存转储到一个物理文件中，以后可以用来查找泄漏:
+
+```text
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=./java_pid<pid>.hprof
+-XX:OnOutOfMemoryError="< cmd args >;< cmd args >"
+-XX:+UseGCOverheadLimit
+```
+
+**HeapDumpOnOutOfMemoryError** 指示 JVM 在遇到 **OutOfMemoryError** 错误时将 heap 转储到物理文件中。
+
+**HeapDumpPath** 表示要写入文件的路径; 可以给出任何文件名; 但是，如果 JVM 在名称中找到一个 `<pid>` 标记，则当前进程的进程 id 将附加到文件名中，并使用`.hprof`格式
+
+**OnOutOfMemoryError** 用于发出紧急命令，以便在内存不足的情况下执行; 应该在 `cmd args` 空间中使用适当的命令。例如，如果我们想在内存不足时重启服务器，我们可以设置参数: `-XX:OnOutOfMemoryError="shutdown -r"` 。
+
+**UseGCOverheadLimit** 是一种策略，它限制在抛出 OutOfMemory 错误之前在 GC 中花费的 VM 时间的比例
+
+
+
